non-edge forces now compile

--- a/notebooks/NB01 - Cython Quadtree.ipynb
+++ b/notebooks/NB01 - Cython Quadtree.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fe99de000143b02cbff56daafd917c4acef777eba9682dc66ef4b1a2a06c0e31"
+  "signature": "sha256:f9328e0bc74d2a681a9ae9e97c2b77062a609fa87f03d96d6fb1672bdebc84c5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -28,7 +28,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -83,24 +83,15 @@
       "    root.is_leaf = True\n",
       "    root.parent = NULL\n",
       "    root.level = 0\n",
+      "    root.cum_size = 0\n",
+      "    root.size = 0\n",
       "    root.w = 1.\n",
       "    for ax in range(2):\n",
       "        root.le[ax] = 0.\n",
       "        root.c[ax] = root.le[ax] + root.w / 2.0\n",
       "        root.cum_com[ax] = 0.\n",
       "        root.cur_pos[ax] = -1.\n",
-      "    root.np = 0\n",
       "    return root\n",
-      "\n",
-      "@cython.boundscheck(False)\n",
-      "cdef inline QuadNode* select_child(QuadNode *node, np.float64_t pos[2]):\n",
-      "    # Find which sub-node a position should go into\n",
-      "    # And return the appropriate node\n",
-      "    cdef np.uint8_t offset[2]\n",
-      "    cdef int ax\n",
-      "    for ax in range(2):\n",
-      "        offset[ax] = (pos[ax] - (node.le[ax] + node.w / 2.0)) > 0.\n",
-      "    return node.children[offset[0]][offset[1]]\n",
       "\n",
       "@cython.boundscheck(False)\n",
       "cdef QuadNode* create_child(QuadNode *parent, np.uint8_t offset[2]):\n",
@@ -111,6 +102,7 @@
       "    child.parent = parent\n",
       "    child.level = parent.level + 1\n",
       "    child.size = 0\n",
+      "    child.cum_size = 0\n",
       "    child.w = parent.w / 2.0\n",
       "    for ax in range(2):\n",
       "        child.le[ax] = parent.le[ax] + offset[ax] * parent.w / 2.0\n",
@@ -118,6 +110,16 @@
       "        child.cum_com[ax] = 0.\n",
       "        child.cur_pos[ax] = -1.\n",
       "    return child\n",
+      "\n",
+      "@cython.boundscheck(False)\n",
+      "cdef inline QuadNode* select_child(QuadNode *node, np.float64_t pos[2]):\n",
+      "    # Find which sub-node a position should go into\n",
+      "    # And return the appropriate node\n",
+      "    cdef np.uint8_t offset[2]\n",
+      "    cdef int ax\n",
+      "    for ax in range(2):\n",
+      "        offset[ax] = (pos[ax] - (node.le[ax] + node.w / 2.0)) > 0.\n",
+      "    return node.children[offset[0]][offset[1]]\n",
       "\n",
       "@cython.boundscheck(False)\n",
       "cdef subdivide(QuadNode *node):\n",
@@ -148,7 +150,7 @@
       "    for ax in range(2):\n",
       "        root.cum_com[ax] *= frac_seen\n",
       "    for ax in range(2):\n",
-      "        root.cum_com += pos[ax] * frac_new\n",
+      "        root.cum_com[ax] += pos[ax] * frac_new\n",
       "    # Increment the total number points including this\n",
       "    # node and below it\n",
       "    root.cum_size += 1\n",
@@ -180,7 +182,7 @@
       "@cython.boundscheck(False)\n",
       "cdef compute_non_edge_forces(QuadNode* node, \n",
       "                             np.float64_t theta,\n",
-      "                             np.float64_t *sum_Q,\n",
+      "                             double sum_Q,\n",
       "                             np.uint64_t point_index,\n",
       "                             np.ndarray[np.float64_t, ndim=2] pos_reference,\n",
       "                             np.ndarray[np.float64_t, ndim=2] force):\n",
@@ -189,7 +191,7 @@
       "    # recording along the way how many points that cell represents\n",
       "    cdef QuadNode* child\n",
       "    cdef int ax\n",
-      "    cdef int i\n",
+      "    cdef int i, child_i, child_j\n",
       "    cdef int nrows = pos_reference.shape[0]\n",
       "    cdef np.float64_t dist2, mult, qijZ\n",
       "    cdef np.float64_t delta[2]\n",
@@ -199,25 +201,30 @@
       "    if node.cum_size == 0: \n",
       "        return\n",
       "    # Do not compute self-interactions\n",
-      "    if node.is_leaf && node.point_index == point_index:\n",
+      "    if node.is_leaf and (node.point_index == point_index):\n",
       "        return\n",
       "\n",
       "    # For every particle, compute t-SNE force\n",
       "    # FIX ME: shouldn't loop over every particle here\n",
       "    dist2 = 0.0\n",
       "    for ax in range(2):\n",
-      "        delta[ax] += (node.le[ax] + node.w[ax] / 2.0\n",
-      "                       - pos_reference[point_index][ax]) \n",
+      "        # delta[ax] += (node.le[ax] + node.w / 2.0\n",
+      "        #               - pos_reference[point_index][ax]) \n",
+      "        delta[ax] += node.le[ax] \n",
+      "        delta[ax] += node.w / 2.0\n",
+      "        delta[ax] -= pos_reference[point_index][ax]\n",
       "        dist2 += delta[ax]**2.0\n",
-      "    if node.isleaf or (node.w / np.sqrt(dist2) < theta):\n",
-      "        qijZ = 1.0 / (1.0 + dist)\n",
-      "        *sum_Q += node.cum_size * qijZ\n",
+      "    if node.is_leaf or (node.w / np.sqrt(dist2) < theta):\n",
+      "        qijZ = 1.0 / (1.0 + dist2)\n",
+      "        sum_Q += node.cum_size * qijZ\n",
       "        mult = node.cum_size * qijZ * qijZ\n",
       "        for ax in range(2):\n",
-      "            force[point_index][ax] += mult * delta[d]\n",
+      "            force[point_index][ax] += mult * delta[ax]\n",
       "    else:\n",
-      "        for child in node.children:\n",
-      "            compute_non_edge_forces(child, theta, &sum_Q, \n",
+      "        for child_i in range(2):\n",
+      "            for child_j in range(2):\n",
+      "                child = node.children[child_i][child_j]\n",
+      "                compute_non_edge_forces(child, theta, sum_Q, \n",
       "                                    point_index,\n",
       "                                    pos_reference, force)\n",
       "\n",
@@ -279,7 +286,7 @@
       "            child = root.children[i][j]\n",
       "            k += 1\n",
       "            if rands[k] < 1e-2:\n",
-      "                count += child.np\n",
+      "                count += child.size\n",
       "            else:\n",
       "                if child.is_leaf and child.cur_pos[0] != -1.:\n",
       "                    count += 1\n",
@@ -301,38 +308,25 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
+        "warning: /Users/cemoody/.ipython/cython/_cython_magic_e13623b27da75a0b5432cfef4abb79d5.pyx:186:39: local variable 'i' referenced before assignment\n",
         "\n",
         "Error compiling Cython file:\n",
         "------------------------------------------------------------\n",
         "...\n",
-        "        delta[ax] += (node.le[ax] + node.w[ax] / 2.0\n",
-        "                       - pos_reference[point_index][ax]) \n",
-        "        dist2 += delta[ax]**2.0\n",
-        "    if node.isleaf or (node.w / np.sqrt(dist2) < theta):\n",
-        "        qijZ = 1.0 / (1.0 + dist)\n",
-        "        *sum_Q += node.cum_size * qijZ\n",
-        "       ^\n",
+        "        for ax in range(2):\n",
+        "            force[point_index][ax] += mult * delta[ax]\n",
+        "    else:\n",
+        "        for child_i in range(2):\n",
+        "            for child_j in range(2):\n",
+        "                child = node.children[i][j]\n",
+        "                                         ^\n",
         "------------------------------------------------------------\n",
         "\n",
-        "/Users/cemoody/.ipython/cython/_cython_magic_5d17813ec32d126dd279696a3d6f1a70.pyx:173:8: Illegal operand for inplace operation.\n",
-        "\n",
-        "Error compiling Cython file:\n",
-        "------------------------------------------------------------\n",
-        "...\n",
-        "                                    pos_reference, force)\n",
-        "\n",
-        "    \n",
-        "@cython.boundscheck(False)\n",
-        "cdef create_quadtree_cython(np.ndarray[np.float64_t, ndim=2] pos_array\n",
-        "                            verbose=False):\n",
-        "                           ^\n",
-        "------------------------------------------------------------\n",
-        "\n",
-        "/Users/cemoody/.ipython/cython/_cython_magic_5d17813ec32d126dd279696a3d6f1a70.pyx:186:28: Expected ')', found 'verbose'\n"
+        "/Users/cemoody/.ipython/cython/_cython_magic_e13623b27da75a0b5432cfef4abb79d5.pyx:186:42: undeclared name not builtin: j\n"
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
