doesn't compile, but sketch of gradient done

--- a/notebooks/NB01 - Cython Quadtree.ipynb
+++ b/notebooks/NB01 - Cython Quadtree.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:95aa47b6873544ca8da12f5692fb9fbaae588a79c7b3d88d0d519cc1c77036cb"
+  "signature": "sha256:1003a9e3a69ae2c515f1ce061b9f8636487b26c12076227243f9e628f1cf0928"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -117,7 +117,7 @@
       "    @cython.boundscheck(False)\n",
       "    @cython.wraparound(False)\n",
       "    @cython.cdivision(True)\n",
-      "    cdef inline QuadNode* create_root(self):\n",
+      "    cdef void inline QuadNode* create_root(self):\n",
       "        # Create a default root node\n",
       "        cdef int ax\n",
       "        root = <QuadNode*> malloc(sizeof(QuadNode))\n",
@@ -139,7 +139,7 @@
       "    @cython.boundscheck(False)\n",
       "    @cython.wraparound(False)\n",
       "    @cython.cdivision(True)\n",
-      "    cdef inline QuadNode* create_child(self, QuadNode *parent, np.uint8_t offset[2]):\n",
+      "    cdef void inline QuadNode* create_child(self, QuadNode *parent, np.uint8_t offset[2]):\n",
       "        # Create a new child node with default parameters\n",
       "        cdef int ax\n",
       "        child = <QuadNode *> malloc(sizeof(QuadNode))\n",
@@ -161,7 +161,7 @@
       "    @cython.boundscheck(False)\n",
       "    @cython.wraparound(False)\n",
       "    @cython.cdivision(True)\n",
-      "    cdef inline QuadNode* select_child(self, QuadNode *node, np.float64_t pos[2]):\n",
+      "    cdef void inline QuadNode* select_child(self, QuadNode *node, np.float64_t pos[2]):\n",
       "        # Find which sub-node a position should go into\n",
       "        # And return the appropriate node\n",
       "        cdef int offset[2]\n",
@@ -173,7 +173,7 @@
       "    @cython.boundscheck(False)\n",
       "    @cython.wraparound(False)\n",
       "    @cython.cdivision(True)\n",
-      "    cdef inline subdivide(self, QuadNode *node):\n",
+      "    cdef void inline subdivide(self, QuadNode *node):\n",
       "        # This instantiates 4 nodes for the current node\n",
       "        cdef int i = 0\n",
       "        cdef int j = 0\n",
@@ -190,7 +190,7 @@
       "    @cython.boundscheck(False)\n",
       "    @cython.wraparound(False)\n",
       "    @cython.cdivision(True)\n",
-      "    cdef insert(self, QuadNode *root, np.float64_t pos[2], int point_index):\n",
+      "    cdef void insert(self, QuadNode *root, np.float64_t pos[2], int point_index):\n",
       "        # Introduce a new point into the quadtree\n",
       "        # by recursively inserting it and subdividng as necessary\n",
       "        cdef QuadNode *child\n",
@@ -275,7 +275,7 @@
       "    @cython.boundscheck(False)\n",
       "    @cython.wraparound(False)\n",
       "    @cython.cdivision(True)\n",
-      "    cdef free_recursive(self, QuadNode *root, np.ndarray[np.int32_t, ndim=1] counts):\n",
+      "    cdef void free_recursive(self, QuadNode *root, np.ndarray[np.int32_t, ndim=1] counts):\n",
       "        cdef int i, j    \n",
       "        cdef QuadNode* child\n",
       "        if not root.is_leaf:\n",
@@ -290,13 +290,25 @@
       "                            counts[2] +=1\n",
       "                    free(child)\n",
       "    \n",
-      "    cdef compute_gradient(self):\n",
-      "        pass\n",
+      "    #@cython.boundscheck(False)\n",
+      "    #@cython.wraparound(False)\n",
+      "    #@cython.cdivision(True)\n",
+      "    cdef np.ndarray compute_gradient(self, np.float64_t theta,\n",
+      "                                     np.ndarray[np.float64_t, ndim=1] val_P,\n",
+      "                                     np.ndarray[np.float64_t, ndim=2] pos_reference):\n",
+      "        np.ndarray[np.float64_t, ndim=2] neg_force\n",
+      "        np.ndarray[np.float64_t, ndim=2] pos_force\n",
+      "        cdef np.uint64_t point_index\n",
+      "        self.compute_edge_forces(val_P, pos_reference, pos_force)\n",
+      "        for point_index in range(pos_reference.shape[0]):\n",
+      "            sum_Q = self.compute_nonedge_forces(self.root_node, theta, sum_Q, point_index,\n",
+      "                                                val_P, pos_reference, neg_force)\n",
+      "        return pos_force - (neg_force / sum_Q)\n",
       "                    \n",
-      "    @cython.boundscheck(False)\n",
-      "    @cython.wraparound(False)\n",
-      "    @cython.cdivision(True)\n",
-      "    cdef compute_edge_forces(self, np.ndarray[np.float64_t, ndim=1] val_P,\n",
+      "    #@cython.boundscheck(False)\n",
+      "    #@cython.wraparound(False)\n",
+      "    #@cython.cdivision(True)\n",
+      "    cdef void compute_edge_forces(self, np.ndarray[np.float64_t, ndim=1] val_P,\n",
       "                             np.ndarray[np.float64_t, ndim=2] pos_reference,\n",
       "                             np.ndarray[np.float64_t, ndim=2] force):\n",
       "        # Sum over the following expression for i not equal to j\n",
@@ -316,10 +328,10 @@
       "                for dim in range(2):\n",
       "                    force[i, dim] += D * buff[dim]\n",
       "\n",
-      "    @cython.boundscheck(False)\n",
-      "    @cython.wraparound(False)\n",
-      "    @cython.cdivision(True)\n",
-      "    cdef compute_non_edge_forces(self, QuadNode* node, \n",
+      "    #@cython.boundscheck(False)\n",
+      "    #@cython.wraparound(False)\n",
+      "    #@cython.cdivision(True)\n",
+      "    cdef double compute_non_edge_forces(self, QuadNode* node, \n",
       "                                 np.float64_t theta,\n",
       "                                 double sum_Q,\n",
       "                                 np.uint64_t point_index,\n",
@@ -357,10 +369,12 @@
       "                for i in range(2):\n",
       "                    for j in range(2):\n",
       "                        child = node.children[i][j]\n",
-      "                        self.compute_non_edge_forces(child, theta, sum_Q, \n",
-      "                                                     point_index,\n",
-      "                                                     pos_reference, force)\n",
-      "    cdef check_consistency(self):\n",
+      "                        sum_Q += self.compute_non_edge_forces(child, theta, sum_Q, \n",
+      "                                                              point_index,\n",
+      "                                                              pos_reference, force)\n",
+      "            return sum_Q\n",
+      "        \n",
+      "    cdef void check_consistency(self):\n",
       "        cdef int count \n",
       "        count = 0\n",
       "        count = self.count_points(self.root_node, count)\n",
